Implement HTML4 align=middle according to spec. Correct the DOM attribute value mapping for some of the other values as well. b=192077 r+sr=dbaron